# gists-gone

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
gists_gone/: gists_gone.py
tests/: test_gists_gone.py
tests/fixtures/: fake_gists.json
