[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "gists-gone"
version = "0.0.1"
description = "A CLI that gives you more granular control over bulk deletion of your Github gists."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["gists", "Github"]
authors = [{ name = "Ben Nour", email = "author@example.com" }]
maintainers = [{ name = "Ben Nour", email = "hello@ben-nour.com" }]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["alive_progress", "requests", "rich"]

[project.urls]
homepage = "https://github.com/ben-n93/gists-gone/"
repository = "https://github.com/ben-n93/gists-gone"


[project.scripts]
gists-gone = "gists_gone.gists_gone:cli"

[tool.setuptools]
